--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ certifi==2025.10.5
 charset-normalizer==3.4.4
 colorama==0.4.6
 cors==1.0.1
+dj-database-url==3.0.1
 Django==5.2.7
 djangorestframework==3.16.1
 filelock==3.20.0
@@ -18,6 +19,7 @@ outcome==1.3.0.post0
 packaging==25.0
 pluggy==1.6.0
 Pygments==2.19.2
+PyMySQL==1.1.2
 PySocks==1.7.1
 pytest==8.4.2
 python-dotenv==1.2.1
