--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "types": ["vite/client"],
-    "strict": true
+    "strict": true,
+    "noEmit": true
   },
   "include": ["src", "src/env.d.ts"]
 }
