feature(fronted-min): Implémentation de chakraProvier au niveau root pour permettre l'utilisation de cette librairie. Mise en place de react-router-dom pour le routing.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "types": ["vite/client"],
     "strict": true,
     "noEmit": true
   },
-  "include": ["src", "src/env.d.ts"]
+  "extends": "./tsconfig.app.json",
+  "include": ["src", "src/env.d.ts"],
 }
