--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.6
 cors==1.0.1
 dj-database-url==3.0.1
 Django==5.2.7
+django-cors-headers==4.9.0
 djangorestframework==3.16.1
 filelock==3.20.0
 future==1.0.0
@@ -22,6 +23,7 @@ Pygments==2.19.2
 PyMySQL==1.1.2
 PySocks==1.7.1
 pytest==8.4.2
+pytest-django==4.11.1
 python-dotenv==1.2.1
 requests==2.32.5
 requests-file==3.0.1
