Pour une question de simplicité les fichiers d'environnements seront push sur github, ce qui n'est évidemment jamais le cas pour un projet réel.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,26 @@
-FROM python:3.14-slim
+# syntax=docker/dockerfile:1
+FROM python:3.12-slim
 
-WORKDIR /www
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=1
 
-# Installation des packages
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential libpq-dev curl && \
+    rm -rf /var/lib/apt/lists/*
+
+WORKDIR /build
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# copie du reste des fichiers
+# Copie du code (sans .env / .venv)
+WORKDIR /app
 COPY . .
 
-EXPOSE 8000
-# prod cmd
+RUN useradd -m app && chown -R app:app /app
+USER app
+
 CMD ["sh", "-c", "python manage.py migrate && gunicorn backend.wsgi:application --bind 0.0.0.0:8000"]
