--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,12 @@
-version: '3.9'
 services:
   database:
     image: mysql:8.0
     container_name: database
     restart: always
+    env_file:
+      - ./.env
     environment:
-      - MYSQL_DATABASE=database
-      - MYSQL_USER=root
+      - MYSQL_DATABASE=${DB_NAME}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     ports:
       - 3306:3306
@@ -22,7 +22,7 @@ services:
     env_file:
       - backend/.env
     environment:
-      - DATABASE_URL=mysql://root:${MYSQL_ROOT_PASSWORD}@database:3306/database
+      - DATABASE_URL=${DB_URL}
     ports:
       - 8000:8000
 
